RESOLVED FIXED209903
Video previews on shutterstock.com don't play when tapped on iPadOS
https://bugs.webkit.org/show_bug.cgi?id=209903
Summary Video previews on shutterstock.com don't play when tapped on iPadOS
Antoine Quint
Reported 2020-04-02 06:36:27 PDT
Video previews on shutterstock.com don't play when tapped on iPadOS
Attachments
Patch (25.46 KB, patch)
2020-04-02 06:40 PDT, Antoine Quint
no flags
Patch (4.34 KB, patch)
2020-04-02 08:07 PDT, Antoine Quint
wenson_hsieh: review+
Antoine Quint
Comment 1 2020-04-02 06:40:15 PDT
Antoine Quint
Comment 2 2020-04-02 06:40:20 PDT
Wenson Hsieh
Comment 3 2020-04-02 07:57:31 PDT
Comment on attachment 395264 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=395264&action=review > Source/WebCore/loader/DocumentLoader.h:138 > + Allow, > + Deny, Nit - sounds a bit weird for a `CanPrevent~` enum to have values of Allow and Deny. Maybe just Default, No, and Yes?
Antoine Quint
Comment 4 2020-04-02 08:07:20 PDT
Antoine Quint
Comment 5 2020-04-02 08:54:24 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 395264 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=395264&action=review > > > Source/WebCore/loader/DocumentLoader.h:138 > > + Allow, > > + Deny, > > Nit - sounds a bit weird for a `CanPrevent~` enum to have values of Allow > and Deny. Maybe just Default, No, and Yes? The newer patch removes the desktop-specific part of the quirk.
Antoine Quint
Comment 6 2020-04-02 08:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.